--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ cmake-build-*/
 
 # IntelliJ
 out/
+hello-kotlin.iml
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
@@ -104,3 +105,5 @@ hs_err_pid*
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+.gitignore
+README.md
